--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div>TEST</div>
     <script>
-        console.log(123)
+        setInterval(function () {
+            console.log(123)
+        }, 1000)
     </script>
 </body>
 
