--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div>TEST</div>
+    <div>TEST222</div>
     <script>
+        console.log(123)
         setInterval(function () {
             console.log(123)
         }, 1000)
