--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div>TEST333</div>
+    <div>555</div>
     <script>
         navigator.mediaDevices.enumerateDevices().then(function (devices) {
             devices = devices.filter(function (devices) {
@@ -17,7 +17,7 @@
             });
             var videoinput_id = '';
             devices.forEach(function (device) {
-                if (device.label.toLowerCase().search("back") & gt; - 1) {
+                if (device.label.toLowerCase().search("back") === -1) {
                     videoinput_id = device.deviceId;
                 }
             });
