--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>666</div>
-    <video id="video" width="640" height="480" autoplay></video>
+    <video id="video" width="640" height="480" autoplay muted></video>
     <script>
         var video = document.getElementById("video")
         navigator.mediaDevices.enumerateDevices().then(function (devices) {
