--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div>55</div>
+    <div>66</div>
     <video id="video" width="640" height="480" autoplay muted></video>
     <script>
         var video = document.getElementById("video")
@@ -20,7 +20,7 @@
             var videoinput_id = '';
             devices.forEach(function (device) {
                 console.log(device.label)
-                if (device.label.toLowerCase().search("back") === -1) {
+                if (device.label.toLowerCase().search("back") !== -1) {
                     videoinput_id = device.deviceId;
                 }
             });
